[gd_scene load_steps=11 format=2]

[ext_resource path="res://graphics/mouth.png" type="Texture" id=1]
[ext_resource path="res://graphics/background.png" type="Texture" id=2]
[ext_resource path="res://audio/quack.wav" type="AudioStream" id=3]
[ext_resource path="res://graphics/eyes_open.png" type="Texture" id=4]
[ext_resource path="res://src/LittleHelper.gd" type="Script" id=5]
[ext_resource path="res://src/HelperButton.gd" type="Script" id=6]
[ext_resource path="res://graphics/eyes_closed.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 4 ) ],
"loop": false,
"name": "blink",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Mouth:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 48 ), Vector2( 32, 52 ), Vector2( 32, 48 ), Vector2( 32, 52 ), Vector2( 32, 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Mouth:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0, 0.0, -2.0, 0.0 ]
}

[node name="LIttleHelper" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 299.814 ],
"_edit_vertical_guides_": [ 512.086 ]
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 384.0
margin_top = 245.0
margin_right = 640.0
margin_bottom = 355.0
rect_min_size = Vector2( 256, 110 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
margin_left = 46.0
margin_right = 209.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tell me everything! :)       "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MessageLabel"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelperButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 96.0
margin_top = 28.0
margin_right = 160.0
margin_bottom = 92.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mouth" type="Sprite" parent="VBoxContainer/HelperButton"]
position = Vector2( 32, 48 )
texture = ExtResource( 1 )
offset = Vector2( 0, -16 )

[node name="Head" type="Sprite" parent="VBoxContainer/HelperButton"]

[node name="Eyes" type="AnimatedSprite" parent="VBoxContainer/HelperButton"]
frames = SubResource( 2 )
animation = "blink"
centered = false

[node name="Animations" type="Node2D" parent="VBoxContainer/HelperButton"]

[node name="MouthAP" type="AnimationPlayer" parent="VBoxContainer/HelperButton/Animations"]
autoplay = "wiggle_mouth"
anims/wiggle_mouth = SubResource( 3 )

[node name="NameLabel" type="Label" parent="VBoxContainer"]
margin_left = 70.0
margin_top = 96.0
margin_right = 186.0
margin_bottom = 110.0
size_flags_horizontal = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Faithful Lil' Helper"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="BlinkTimer" type="Timer" parent="."]
one_shot = true
